# rxls

./: .gitignore  LICENSE  README.md  __init__.py  benchmarks.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
rxls/: __init__.py  biff.py  biff_enum.py  biff_recs.py  cell.py  constants.py  core.py  record.py  record_enum.py  rels.py  series.py
rxls/chunk/: __init__.py  arrow.py  casts.py  chunk.py
rxls/reader/: __init__.py  common.py  reader.py  xlsb.py  xlsb_reader.py  xlsx.py  xlsx_reader.py
rxls/records/: BrtBundleSh.py  BrtFmt.py  BrtXF.py  XLWideString.py  __init__.py
tests/: test_biff12.py
