[tool.poetry]
name = "rxls"
version = "0.1.0"
description = "Reading both XLSX and XLSB files, fast and memory-safe, into PyArrow, Polars or Pandas."
authors = ["SaelKimberly <sael.kimberly@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyarrow = "^13.0.0"
polars = "^0.19.3"
numpy = "^1.24.4"
pandas = "^2.0.3"
recordclass = "^0.20"
tqdm = "^4.66.1"
typing-extensions = "^4.8.0"
numba = "^0.58.0"


[tool.poetry.group.benchmarks.dependencies]
ipykernel = "^6.25.2"
xlsx2csv = "^0.8.1"
openpyxl = "^3.1.2"
pyxlsb = "^1.0.10"
memory-profiler = "^0.61.0"
py-cpuinfo = "^9.0.0"
lxml = "^4.9.3"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.stubs.dependencies]
pyarrow-stubs = "^10.0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
