
[project]
name = "rxls"
version = "0.2.2"
description = "Reading both XLSX and XLSB files, fast and memory-safe, into PyArrow."
authors = [{ name = "SaelKimberly", email = "sael.kimberly@yandex.ru" }]

dependencies = [
    "recordclass>=0.21.1",
    "numpy>=1.24.4",
    "pyarrow>=14.0.2",
    "typing-extensions>=4.9.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/SaelKimberly/rxls"
Documentation = "https://github.com/SaelKimberly/rxls"
Repository = "https://github.com/SaelKimberly/rxls.git"
Issues = "https://github.com/SaelKimberly/rxls/issues"


[project.optional-dependencies]
performance = ["numba>=0.58.1", "tbb>=2021.11.0"]
ts_extended = ["polars>=0.20.4"]
tests = ["pytest>=7.4.4"]
benchmarks = [
    "notebook>=7.0.6",
    "xlsx2csv>=0.8.2",
    "lxml>=5.1.0",
    "openpyxl>=3.1.2",
    "pyxlsb>=1.0.10",
    "python-calamine>=0.1.7",
    "memory-profiler>=0.61.0",
    "py-cpuinfo>=9.0.0",
    "matplotlib>=3.7.4",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
